--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
 <div class="page-wrap">
+<section id="page-wrap-inside">
   <header>
     <h1 class="homepage-title">
     <span>The personal website of</span>
@@ -21,25 +22,37 @@
     <a href="/speaking/">Speaking</a>
     </nav>
     </header>
-</div>
-<script type="text/javascript">
-  function recentPost(json) {
-    for (var i = 0; i < json.feed.entry.length; i++) {
-      for (var j = 0; j < json.feed.entry[i].link.length; j++) {
-        if (json.feed.entry[i].link[j].rel == 'alternate') {
-          var postUrl = json.feed.entry[i].link[j].href;
-          break;
-        }
-      }
-      var postTitle = json.feed.entry[i].title.$t;
-      var postSummary = json.feed.entry[i].summary.$t;
-     var item = '<div class="item"><h3><a href=' + postUrl + '>' + postTitle + '</h3></a><p>' + postSummary + '</p></div>';
-      document.write(item);
-    }
-  }
-</script>
-<script src="https://downloads.xnetking.in/feeds/posts/summary/-/ads?max-results=5&alt=json-in-script&callback=recentPost"></script>
 
+    <section id="blogroll">
+      <div class="inside">
+        I like RSS. Here's a handful of favorites that are the blogs of individuals: <br>
+        <a href='#'>My Site 1</a> <a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a>
+      </div>
+    </section>
+    <section id="blogroll">
+      <div class="inside">
+        I like RSS. Here's a handful of favorites that are the blogs of individuals: <br>
+        <a href='#'>My Site 1</a> <a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a>
+      </div>
+    </section>
+    <section id="blogroll">
+      <div class="inside">
+        I like RSS. Here's a handful of favorites that are the blogs of individuals: <br>
+        <a href='#'>My Site 1</a> <a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a>
+      </div>
+    </section>
+
+
+
+</section>
+
+<section id="footer">
+  <div class="credit"> A K Singh Rajpoot</div>
+</section>
+
+
+
+</div>
     <script src="main.js"></script>
   </body>
 </html>
