--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <section id="blogroll">
       <div class="inside">
-        I like RSS. Here's a handful of favorites that are the blogs of individuals: <br>
+        <div class="wrap-title">Educational Qualification</div> <br>
         <a href='#'>My Site 1</a> <a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a>
       </div>
     </section>
@@ -46,9 +46,6 @@
 
 </section>
 
-<section id="footer">
-  <div class="credit"> A K Singh Rajpoot</div>
-</section>
 
 
 
