--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href='images/aksinghrajpoot.png' type="image/gif" sizes="16x16">
     <title>A K Singh Rajpoot</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/css/bootstrap-grid.min.css" integrity="sha512-Aa+z1qgIG+Hv4H2W3EMl3btnnwTQRA47ZiSecYSkWavHUkBF2aPOIIvlvjLCsjapW1IfsGrEO3FU693ReouVTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
-<div class="page-wrap">
-<section id="page-wrap-inside">
+    <div class="preloader">
+    
+      <svg width="200" height="200" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" class="lds-ripple" style="background:0 0"><circle cx="50" cy="50" r="4.719" fill="none" stroke="#63FF6A" stroke-width="2"><animate attributeName="r" calcMode="spline" values="0;40" keyTimes="0;1" dur="3" keySplines="0 0.2 0.8 1" begin="-1.5s" repeatCount="indefinite"/><animate attributeName="opacity" calcMode="spline" values="1;0" keyTimes="0;1" dur="3" keySplines="0.2 0 0.8 1" begin="-1.5s" repeatCount="indefinite"/></circle><circle cx="50" cy="50" r="27.591" fill="none" stroke="#5699d2" stroke-width="2"><animate attributeName="r" calcMode="spline" values="0;40" keyTimes="0;1" dur="3" keySplines="0 0.2 0.8 1" begin="0s" repeatCount="indefinite"/><animate attributeName="opacity" calcMode="spline" values="1;0" keyTimes="0;1" dur="3" keySplines="0.2 0 0.8 1" begin="0s" repeatCount="indefinite"/></circle></svg>
+      
+    </div>
   <header>
     <h1 class="homepage-title">
     <span>The personal website of</span>
@@ -23,7 +28,7 @@
     </nav>
     </header>
 
-    <section id="blogroll">
+    <section class='container' id="blogroll">
       <div class="inside">
         <div class="wrap-title">Educational Qualification</div> <br>
         <a href='#'>My Site 1</a> <a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a><a href='#'>My Site 1</a>
@@ -44,12 +49,9 @@
 
 
 
-</section>
-
-
-
-
-</div>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/css/bootstrap-grid.min.css" integrity="sha512-Aa+z1qgIG+Hv4H2W3EMl3btnnwTQRA47ZiSecYSkWavHUkBF2aPOIIvlvjLCsjapW1IfsGrEO3FU693ReouVTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
+<script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
