--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a href="/" id="z-text-me">A K Singh Rajpoot</a>
     </h1>
     <nav>
-    <a href="/blog/">Blog</a>
+    <a href="https://dev.xnetking.in">Blog</a>
     <a href="/timeline/">Timeline</a>
     <a href="/interviews/">Interviews</a>
     <a href="/speaking/">Speaking</a>
