--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       
     </div>
   <header>
+    <img class='logo' src='images/aksinghrajpoot.png' width="200px">
     <h1 class="homepage-title">
     <a href="/" id="z-text-me">A K Singh Rajpoot</a>
     </h1>
