--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href='images/aksinghrajpoot.png' type="image/gif" sizes="16x16">
     <title>A K Singh Rajpoot</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/css/bootstrap-grid.min.css" integrity="sha512-Aa+z1qgIG+Hv4H2W3EMl3btnnwTQRA47ZiSecYSkWavHUkBF2aPOIIvlvjLCsjapW1IfsGrEO3FU693ReouVTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
     <div class="preloader">
@@ -16,6 +17,9 @@
       
     </div>
   <header>
+    <img class='logo' src='images/aksinghrajpoot.png' width="200px">
+
+    <div id="aeroplane"></div><div id="o-aeroplane"></div>
     <h1 class="homepage-title">
     <a href="/" id="z-text-me">A K Singh Rajpoot</a>
     </h1>
@@ -46,6 +50,29 @@
       </div>
     </section>
 
+
+<section class="footer">
+<div class="container">
+    
+  <div class="row">
+    <div class="col-md-6">
+      <div class="copyright">
+        <span>Copyright © 2021 </span>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="social-icons">
+        <ul>
+          <li class="icon"><i class="fab fa-twitter"></i></li>
+          <li class="icon"><i class="fab fa-instagram"></i></li>
+          <li class="icon"><i class="fab fa-github"></i></li>
+          <li class="icon"><i class="fab fa-linkedin"></i></li>
+        </ul>
+      </div>
+    </div>
+</div>
+  </div>
+</section>
 
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/css/bootstrap-grid.min.css" integrity="sha512-Aa+z1qgIG+Hv4H2W3EMl3btnnwTQRA47ZiSecYSkWavHUkBF2aPOIIvlvjLCsjapW1IfsGrEO3FU693ReouVTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
