--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
       
     </div>
   <header>
+    <div id="aeroplane"></div>
     <img class='logo' src='images/aksinghrajpoot.png' width="200px">
 
-    <div id="aeroplane"></div><div id="o-aeroplane"></div>
+    
 
     <h1 class="homepage-title">
     <a href="/" id="z-text-me">A K Singh Rajpoot</a>
