--- a/index.html
+++ b/index.html
@@ -35,9 +35,23 @@
           <div class="inside">
             <a href=""><img src="icons/react.png" alt="react"> React</a>
             <a href=""><img src="icons/django.png" alt="Django"> Django</a>
-            <a href=""><img src="icons/html.png" alt="HTML"> HTML</a>
             <a href=""><img src="icons/javascript.png" alt="Javascript"> Javascript</a>
+            <a href=""><img src="icons/html.png" alt="HTML"> HTML</a>
             <a href=""><img src="icons/css.png" alt="CSS"> CSS</a>
+            <a href=""><img src="icons/wordpress.png" alt="CSS"> Wordpress</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="container project-stack">
+      <div class="card">
+        <div class="heading">Projects 🗂</div>
+        <span class='sub-heading'>List of projects & contributions done by me.</span>
+        <div class="body" id=blogroll>
+          <div class="inside">
+            <ul>
+              <li>🚀 <span>Global Public School Kalpi</span> - A Primary School Website Created in 2021 <a href="http://globalpublicschoolkalpi.in/" target="_">Live</a> </li>
+            </ul>
           </div>
         </div>
       </div>
