--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="refresh" content="0;url=http://aksinghrajpoot.com" />
     <meta name="robots" content="noindex">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href='images/aksinghrajpoot.png' type="image/gif" sizes="16x16">
