--- a/index.html
+++ b/index.html
@@ -13,100 +13,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
-    <div class="preloader">
-      <svg width="200" height="200" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" class="lds-ripple" style="background:0 0"><circle cx="50" cy="50" r="4.719" fill="none" stroke="#63FF6A" stroke-width="2"><animate attributeName="r" calcMode="spline" values="0;40" keyTimes="0;1" dur="3" keySplines="0 0.2 0.8 1" begin="-1.5s" repeatCount="indefinite"/><animate attributeName="opacity" calcMode="spline" values="1;0" keyTimes="0;1" dur="3" keySplines="0.2 0 0.8 1" begin="-1.5s" repeatCount="indefinite"/></circle><circle cx="50" cy="50" r="27.591" fill="none" stroke="#5699d2" stroke-width="2"><animate attributeName="r" calcMode="spline" values="0;40" keyTimes="0;1" dur="3" keySplines="0 0.2 0.8 1" begin="0s" repeatCount="indefinite"/><animate attributeName="opacity" calcMode="spline" values="1;0" keyTimes="0;1" dur="3" keySplines="0.2 0 0.8 1" begin="0s" repeatCount="indefinite"/></circle></svg>
-    </div>
-  <header>
-    <img class='logo-img' alt="A K Singh Rajpoot" src='images/aksinghrajpoot.png' width="200px">
-    <h1 class="header-title">
-      <a href="/" class="title-link">A K Singh Rajpoot</a>
-    </h1>
-    <span class="subtitle">[ Software Developer & Tech Blogger 👨‍🎓 ]</span>
-    <nav>
-      <a href="https://dev.xnetking.in">Blog</a>
-      <a href="javascript:void(0)">Timeline</a>
-      <a href="javascript:void(0)">Hire Me</a>
-      <a href="javascript:void(0)">Speaking</a>
-      <a href="mailto:imaksinghrajpoot@gmail.com" >Contact</a>
-    </nav>
-    </header>
-    <section class="container tech-stack">
-      <div class="card">
-        <div class="heading">Tech Stack 💻</div>
-        <div class="body" id=blogroll>
-          <div class="inside">
-            <a href=""><img src="icons/react.png" alt="react"> React</a>
-            <a href=""><img src="icons/django.png" alt="Django"> Django</a>
-            <a href=""><img src="icons/javascript.png" alt="Javascript"> Javascript</a>
-            <a href=""><img src="icons/html.png" alt="HTML"> HTML</a>
-            <a href=""><img src="icons/css.png" alt="CSS"> CSS</a>
-            <a href=""><img src="icons/wordpress.png" alt="CSS"> Wordpress</a>
+    <section class="hero">
+      <div class="container">
+        <div class="card">
+          <div class="header">
+            Welcome
           </div>
-        </div>
-      </div>
-    </section>
-    <br>
-    <section class="container project-stack">
-      <div class="card">
-        <div class="heading">Projects 🗂</div>
-        <span class='sub-heading'>List of projects & contributions done by me.</span>
-        <div class="body" id=blogroll>
-          <div class="inside">
-            <ul>
-              <li>🚀 <span>Global Public School Kalpi</span> - A Primary School Website Created in 2021 <a href="http://globalpublicschoolkalpi.in/" target="_">Live</a> </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section>
-    <br>
-    <section class="container individual-blogs">
-      <div class="card">
-        <div class="heading">Favorite Blogs ✍</div>
-        <span class='sub-heading'>The blog of individuals & Community, You may like ❤</span>
-        <div class="body" id=blogroll>
-          <div class="inside">
-            <a href="https://css-tricks.com/author/chriscoyier/">Chris Coyier</a>
-            <a href="https://lo-victoria.com/">Victoria Lo</a>            
-            <a href="https://h.daily-dev-tips.com/">Chris Bongers</a>
-            <a href="https://ayushirawat.com/">Ayushi Rawat</a>
-            <a href="https://inshaweb.hashnode.dev/">Insha Ramin</a>
-            <a href="https://mohit19.medium.com/">Mohit</a>
-            <a href="https://davidwalsh.name/">David Walsh</a>
-            <a href="https://webdevblog.com/">WebDev Blog</a>
-            <a href="https://www.shoutmeloud.com/">Harsh Agrawal</a>
+          <div class="content">
+            You will be redirected to my new website very soon.
           </div>
         </div>
       </div>
     </section>
 
-<section class="footer">
-<div class="container">
-    
-  <div class="row">
-    <div class="col-md-6">
-      <div class="social-icons">
-        <ul>
-          <li class="icon"><i class="fab fa-twitter"></i></li>
-          <li class="icon"><i class="fab fa-instagram"></i></li>
-          <li class="icon"><i class="fab fa-github"></i></li>
-          <li class="icon"><i class="fab fa-linkedin"></i></li>
-        </ul>
-      </div>
-    </div>
-    <div class="col-md-6">
-      <div class="copyright">
-        <span>Made with ❤ By &nbsp;<img  alt="A K Singh Rajpoot" src='images/aksinghrajpoot.png' width="20px" style='vertical-align: middle;'></span>
-      </div>
-    </div>
-</div>
-  </div>
-</section>
 
-
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/css/bootstrap-grid.min.css" integrity="sha512-Aa+z1qgIG+Hv4H2W3EMl3btnnwTQRA47ZiSecYSkWavHUkBF2aPOIIvlvjLCsjapW1IfsGrEO3FU693ReouVTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
-    <script src="main.js"></script>
   </body>
 </html>
