--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             Welcome
           </div>
           <div class="content">
-            You will be redirected to my new website very soon.
+            You will be redirected to my new website in 4 Seconds.
           </div>
         </div>
       </div>
